force-app/Base/main/default/objects/Course__c/fields/Certification__c.field-meta.xml
<CustomField>
	<fullName>Certification__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<description>Certification associated with a course.</description>
	<label>Certification</label>
	<referenceTo>Certification__c</referenceTo>
	<relationshipLabel>Courses</relationshipLabel>
	<relationshipName>Courses</relationshipName>
	<type>Lookup</type>
</CustomField>