force-app/Base/main/default/objects/Course__c/fields/Course_Description__c.field-meta.xml
<CustomField>
	<fullName>Course_Description__c</fullName>
	<description>Description of what is covered in the course.</description>
	<label>Course Description</label>
	<length>32768</length>
	<type>LongTextArea</type>
</CustomField>