force-app/Base/main/default/objects/Course__c/fields/Status__c.field-meta.xml
<CustomField>
	<fullName>Status__c</fullName>
	<description>Status of course.</description>
	<inlineHelpText>Active - Course is currently being taught.
Retired - Course is no longer being taught.</inlineHelpText>
	<label>Status</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Active</fullName>
			</value>
			<value>
				<fullName>Retired</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>