force-app/Base/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
	<fullName>All</fullName>
	<columns>NAME</columns>
	<columns>Duration__c</columns>
	<columns>Status__c</columns>
	<columns>Certification__c</columns>
	<columns>Number_of_Courses_Delivered__c</columns>
	<filterScope>Everything</filterScope>
	<label>All</label>
</ListView>